--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,41 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: #0e7e12;
+}
+
+#card {
+  width: 300px;
+  height: 450px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin: 5% auto;
+}
+
+#upper-symbol {
+  display: inline-block;
+  position: relative;
+  left: 10px;
+  color: red;
+  font-size: 100px;
+  width: 60px;
+  height: 100px;
+}
+
+#number {
+  color: white;
+  font-size: 120px;
+  width: 120px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+#bottom-symbol {
+  float: right;
+  position: relative;
+  right: 10px;
+  bottom: -15px;
+  color: red;
+  font-size: 100px;
+  width: 60px;
+  height: 100px;
+  transform: rotate(-180deg);
+}
